# book_bookings_api

./: Dockerfile  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.yml
infra/commands/: celery.sh
src/: main.py
src/api/: bookings.py  books.py  dependencies.py  genres.py  pagination.py  routers.py  users.py
src/api/v1/: __init__.py  bookings.py  books.py  genres.py  users.py
src/config/: config.py
src/db/: __init__.py  database.py
src/exceptions/: base.py  bookings.py  books.py  genres.py  pagination.py  users.py
src/migrations/: env.py
src/models/: bookings.py  books.py  books_genres.py  genres.py  users.py
src/repositories/: bookings.py  books.py  genres.py  users.py
src/schemas/: bookings.py  books.py  genres.py  users.py
src/schemas/mixins/: bookings.py  books.py  genres.py  users.py
src/services/: bookings.py  books.py  genres.py  users.py
src/tasks/: async_tasks.py  celery_conf.py  tasks.py
src/utils/: constants.py  exception.py  repository.py  transaction.py
