[tool.poetry]
name = "book-catalog"
version = "0.1.0"
description = ""
authors = ["Dmitrii Ivanov <dmitriy.site1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
gunicorn = "^22.0.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
redis = "^5.0.7"
celery = "^5.4.0"
flower = "^2.0.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
